# cdaweb-downloader

./: README.md  pyproject.toml
src/cdaweb_downloader/: __init__.py  align.py  cdf_handler.py  codegen.py  core.py  downloader_gui.py  logger.py  main.py  merge.py  utils.py
